css formatting tweaks to stop columns from overlapping

--- a/application/frontend/src/sass/components/_main.scss
+++ b/application/frontend/src/sass/components/_main.scss
@@ -32,5 +32,6 @@
 
 .listing-card {
   max-width: 20rem;
+  min-width: 15rem;
   max-height: 25rem;
 }
